# sberron-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  start.sh  test.db  test.py
account/: crud.py  views.py
alembic/: env.py
alembic/versions/: 2025_01_30_2121-a5bc7a9dcdb5_create_table.py  2025_01_31_1644-5f01c49bf6a3_create_account.py  2025_01_31_1712-3464609817b8_add_collumns_account.py  2025_01_31_1719-be7883840ded_add_currency_table.py  2025_01_31_1731-eefcb4d33cbb_change_names.py  2025_01_31_1741-3eebdd067fe9_account_client_foreign_key.py  2025_01_31_1750-bd2453dc528d_account_currency_foreign_key.py  2025_01_31_2111-d024b574a6c1_field_to_snake.py  2025_01_31_2220-532ceb44d3ae_currency_primary_key_to_false.py  2025_02_05_2125-6102e71dd561_create_money_move_oreders.py  2025_02_10_1540-4bf20620dbc5_create_users_table.py  2025_02_10_1554-d252ef0d816f_create_user_client_table.py  2025_02_10_2030-348799400dfa_delete.py  2025_02_10_2033-265ff2248150_delete_users.py  2025_02_10_2045-3367efc3567e_delete.py  2025_02_10_2050-f505514bf29a_delete_account.py  2025_02_10_2051-fdebc13b74a2_delete_client.py  2025_02_10_2054-9f30c0c6475f_create_users.py  2025_02_10_2055-3912768c47e1_create_users.py  2025_02_10_2056-420e2d6a31ca_rename_users.py  2025_02_10_2102-5f02d49891df_account_and_currencies_added.py  2025_02_10_2213-50dcb95ce54b_mmo_created.py  2025_02_12_1819-bca9ba5394d4_client_table_added.py  2025_02_12_1822-547f9099898a_user_client_table_added.py  2025_02_12_1914-79801eb0c991_time_last_login_set_to_nullable_in_.py  2025_02_18_1323-4711dd3fabcc_init.py  2025_02_19_1841-c7a61b537de0_user_account.py
api_v1/: __init__.py  dependencies.py
api_v1/account/: crud.py  dependencies.py  schemas.py  views.py
api_v1/client/: crud.py  dependencies.py  schemas.py  views.py
api_v1/currencies/: crud.py  schemas.py  views.py
api_v1/funds/: crud.py  schemas.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/clients/: crud.py  dependencies.py  schemas.py  views.py
client/: crud.py  schemas.py  views.py
core/: config.py  helpers.py
core/models/: __init__.py  account.py  account_user_association.py  base.py  client.py  currency.py  helper.py  mixins.py  money_move_order.py  user.py  user_client.py
routers/: account.py  client.py  move_money.py  user.py
sql/: async_engine.py  engine.py  models.py
tests/: account_test.py.bak  client_test.py  conftest.py  helpers.py  money_movement_test.py  test_engine.py  test_engine.py.bak
tests/account/: account_test.py  fixtures.py
tests/client/: client_test.py  fixtures.py
tests/funds/: fixtures.py  helpers.py  money_movement_test.py
tests/user/: client_test.py  fixtures.py  user_test.py
