[project]
name = "sber-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "asttokens (>=3.0.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "attrs (>=24.3.0,<25.0.0)",
    "backcall (>=0.2.0,<0.3.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "contourpy (>=1.3.1,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "decorator (>=5.1.1,<6.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "docopt (>=0.6.2,<0.7.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "executing (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "fonttools (>=4.55.5,<5.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "iniconfig (>=2.0.0,<3.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "jupyter-client (>=8.6.3,<9.0.0)",
    "jupyter-core (>=5.7.2,<6.0.0)",
    "jupyterlab-pygments (>=0.3.0,<0.4.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "mako (>=1.3.8,<2.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "mistune (>=3.1.0,<4.0.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "nbconvert (>=7.16.5,<8.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "pandocfilters (>=1.5.1,<2.0.0)",
    "parso (>=0.8.4,<0.9.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pickleshare (>=0.7.5,<0.8.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "ptyprocess (>=0.7.0,<0.8.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.27.2,<3.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pylembic (>=0.5.0,<0.6.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyzmq (>=26.2.0,<27.0.0)",
    "referencing (>=0.36.1,<0.37.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "rich-toolkit (>=0.13.2,<0.14.0)",
    "rpds-py (>=0.22.3,<0.23.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "soupsieve (>=2.6,<3.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "stack-data (>=0.6.3,<0.7.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "tinycss2 (>=1.4.0,<2.0.0)",
    "tornado (>=6.4.2,<7.0.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "webencodings (>=0.5.1,<0.6.0)",
    "websockets (>=14.2,<15.0)",
    "yarg (>=0.1.10,<0.2.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)",
    "trio (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pynvim = "^0.5.2"
pytest-asyncio = "^0.25.2"
pytest = "^8.3.4"
ruff = "^0.9.4"
mypy = "^1.14.1"

